update-user-and-add-pagination

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .DS_Store
+.vs/CleanArch/xs/project-cache/API-Debug.json
+.vs/CleanArch/xs/project-cache/Application-Debug.json
+.vs/CleanArch/xs/project-cache/Application-Debug.json
+.vs/CleanArch/xs/project-cache/Domain-Debug.json
+.vs/CleanArch/xs/project-cache/Infrastructure-Debug.json
+.vs/CleanArch/xs/project-cache/ToeicOnline-Debug.json
+.vs/CleanArch/xs/project-cache/ToeicOnlineAdminApp-Debug.json
+.vs/CleanArch/xs/UserPrefs.xml
