Complete CRUD USER

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 .vs/CleanArch/xs/project-cache/ToeicOnline-Debug.json
 .vs/CleanArch/xs/project-cache/ToeicOnlineAdminApp-Debug.json
 .vs/CleanArch/xs/UserPrefs.xml
+.vs/CleanArch/xs/project-cache/Application-Debug.json
